name:                hask3d
version:             0.1.0.0
synopsis:            A foray into 3D graphics with haskell
homepage:            rumblesan.com
license:             BSD3
license-file:        LICENSE
author:              Guy John
maintainer:          guy@rumblesan.com
category:            Graphics
build-type:          Simple
cabal-version:       >=1.8

executable hask3d
  build-depends:       base ==4.7.*, GLURaw ==1.4.*, GLUT ==2.5.*
  hs-source-dirs:      src
  main-is:             main.hs
